--- a/Nsikan.html
+++ b/Nsikan.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
+<html>
 
-  <html>
-  <h1><center>UWEM NSIKAN ESTHER</center></h1>
-  
-  <img src="https://res.cloudinary.com/echef/image/upload/v1566579127/5F25093C-58FB-4F5A-93EF-1EDDC5EDDDC8_uo10rw.jpg">
- 
-  <p><center>E-MAIL: specialzzztar@gmail.com </p>
+<head style=“font-family: Arial”>
+  <title> @UwemEsther | Task 2 </title>
+  <h1>
+    <center>StartNG Internship Task 2 | Uwem Esther </center>
+  </h1>
+  <marquee> Proudly sponsored by flutterwave, StartNG/HNG</marquee>
+
+  <head>
+    <title> UWEN ESTHER CV</title>
+    <link rel="stylesheet" type="text/css" href="estherstyle.css">
+  </head>
+  <h1>
+    <center>UWEM NSIKAN ESTHER</center>
+  </h1>
+  <center>
+    <img src="https://res.cloudinary.com/echef/image/upload/v1566579127/5F25093C-58FB-4F5A-93EF-1EDDC5EDDDC8_uo10rw.jpg">
+  </center>
+
+  <p>
+    <center>E-MAIL: specialzzztar@gmail.com </p>
   <p>PHONE NUMBER: 08138818017 </p>
-  Home address: 14 Udoette street, Uyo.</center></p>
-
-  <h2>PROFILE</h2>
-  <p>I am an enthusiastic, self-oriented individual that can work efficiently in any environment and I am always pushing to contribute positively into any environment of work I find myself. With my practical and inter personal skills amongst other skills,
+  Home address: 14 Udoette street, Uyo.</center>
+  </p>
     I believe I am suitable for this position and would work efficiently. </p>
 
   <h2>EDUCATION</h2>
@@ -31,7 +44,7 @@
             <td> 2006 - 2007 </td>
           </tr>
   </table>
-  <h2>EXPERIENCE </h2>
+<h2>EXPERIENCE </h2>
   <table>
     <tr>
       <td>•Tv Presenter @Rocklandhouse Tv Uyo. </td>
@@ -61,19 +74,23 @@
       <li>Proficient in performing qualitative and quantitative in-depth research.</li>
       <li>Proficient in Microsoft office suites (Microsoft Excel, Word and PowerPoint) </li>
     </ol>
+    <h5>PROGRAMMING SKILLS</h5>
+    <ul>
+      <li> html </li>
+      <li> css </li>
 <h5>KEY SKILLS</h5>
-    <ol>
-      <li>Self-starter demonstrating a strong capacity to work independently and collaboratively</li>
-      <li>Organized and efficient multi-tasker with great attention to detail</li>
-      <li>Excellent problem solver that welcomes new tasks and challenges</li>
-      <li>People-person with effective and demonstrated interpersonal skills</li>
-      <li>Great communicator with excellent verbal and written communication skills</li>
-      <li>Adaptable to change, diplomatic and patient with a positive outlook</li>
-      <li>Proactive team leader and player</li>
-      <li>Ready to learn and grow</li>
-    </ol>
-  </ul>
+      <ol>
+        <li>Self-starter demonstrating a strong capacity to work independently and collaboratively</li>
+        <li>Organized and efficient multi-tasker with great attention to detail</li>
+        <li>Excellent problem solver that welcomes new tasks and challenges</li>
+        <li>People-person with effective and demonstrated interpersonal skills</li>
+        <li>Great communicator with excellent verbal and written communication skills</li>
+        <li>Adaptable to change, diplomatic and patient with a positive outlook</li>
+        <li>Proactive team leader and player</li>
+        <li>Ready to learn and grow</li>
+      </ol>
+    </ul>
 
-  <h5> REFEREE(s) </h5>
-  <p> Mr. Ekanem Brown</p>
-  <p> 08037593581 </p>
+    <h3> REFEREE(s)</h3>
+    <p> Mr. Ekanem Brown</p>
+    <p> 08037593581 </p>
