--- a/Nsikan.html
+++ b/Nsikan.html
@@ -1,79 +1,115 @@
 <!DOCTYPE html>
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title> ESTHER UWEM CV HTML</title>
+<meta name="description" content="">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="style.css">
+</head>
 
-  <html>
-  <h1><center>UWEM NSIKAN ESTHER</center></h1>
-  
-  <img src="https://res.cloudinary.com/echef/image/upload/v1566579127/5F25093C-58FB-4F5A-93EF-1EDDC5EDDDC8_uo10rw.jpg">
- 
-  <p><center>E-MAIL: specialzzztar@gmail.com </p>
-  <p>PHONE NUMBER: 08138818017 </p>
-  Home address: 14 Udoette street, Uyo.</center></p>
+<body>
+<section id="welcome">
+<div class="name-plate">
+<h1>MISS</h1>
+<h1>UWEM, NSIKAN ESTHER</h1>
+  <h1> Shn01447 </h1>
 
-  <h2>PROFILE</h2>
-  <p>I am an enthusiastic, self-oriented individual that can work efficiently in any environment and I am always pushing to contribute positively into any environment of work I find myself. With my practical and inter personal skills amongst other skills,
-    I believe I am suitable for this position and would work efficiently. </p>
+</div>
+</section>
 
-  <h2>EDUCATION</h2>
-  <table>
-    <tr>
-      <td> •University of Uyo, Akwa Ibom state </td>
-      <td> Bachelor of Science Education </td>
-      <td> (B.Sc. Ed) 2014 – 2018 </td>
-
-      <tr>
-        <td> •Federal Government Girls’ College, Owerri. Imo State </td>
-        <td> West African Examination Council (waec)
-          <td> 2007 - 2013 </td>
-
-          <tr>
-            <td> •Startright primary school, Owerri. Imo State </td>
-            <td> Common Entrance Examination Certificate </td>
-            <td> 2006 - 2007 </td>
-          </tr>
-  </table>
-  <h2>EXPERIENCE </h2>
-  <table>
-    <tr>
-      <td>•Tv Presenter @Rocklandhouse Tv Uyo. </td>
-      <td>August 2018- 2019 </td>
-    </tr>
-
-    <td> •Student biology teacher </td>
-    <td>Community SEC SCH, Obong Itam, AKS </td>
-    <td> 2016</td>
-    </tr>
-
-    <td> •Student Biology teacher </td>
-    <td>ImmaculateConception Uyo </td>
-    <td> 2017</td>
-    </tr>
-
-    <td>•founder of ECHEF FOODS</td>
-    <td> 2017-date</td>
-    </tr>
-  </table>
-
-  <h2>SKILLS</h2>
-  <ul>
-    <h5>TECHNICAL SKILLS</h5>
-    <ol>
-      <li> Excellent interpersonal and communications skills in English</li>
-      <li>Proficient in performing qualitative and quantitative in-depth research.</li>
-      <li>Proficient in Microsoft office suites (Microsoft Excel, Word and PowerPoint) </li>
-    </ol>
-<h5>KEY SKILLS</h5>
-    <ol>
-      <li>Self-starter demonstrating a strong capacity to work independently and collaboratively</li>
-      <li>Organized and efficient multi-tasker with great attention to detail</li>
-      <li>Excellent problem solver that welcomes new tasks and challenges</li>
-      <li>People-person with effective and demonstrated interpersonal skills</li>
-      <li>Great communicator with excellent verbal and written communication skills</li>
-      <li>Adaptable to change, diplomatic and patient with a positive outlook</li>
-      <li>Proactive team leader and player</li>
-      <li>Ready to learn and grow</li>
-    </ol>
+<section id="sections">
+<section id="skills">
+<h1>SKILLS</h1>
+<ul>
+          <li> html </li>
+        <li> css</li>
+        <li> js </li>
+        <li>Proficient in performing qualitative and quantitative in-depth research</li>
+        <li>Good Analytical Skills.</li>
+        <li>Excellent interpersonal and communications skills in English</li>
+        <li>Self-starter demonstrating a strong capacity to work independently and collaboratively</li>
+        <li>Organized and efficientPeople-person with effective and demonstrated interpersonal skill multi-tasker with great attention to detail</li>
+        <li>Fast Learner and ready to learn.</li> 
+        <li>Excellent problem solver that welcomes new tasks and challenges </li>
   </ul>
+        
+</section>
 
-  <h5> REFEREE(s) </h5>
-  <p> Mr. Ekanem Brown</p>
-  <p> 08037593581 </p>
+        <li>Federal Government Girls’ College, Owerri. Imo State<br> West African Examination Council (waec) - <em>2007 - 2013</em></li>
+        <hr>
+        <li> Startright primary school, Owerri. Imo State<br> First School leaving certificate - <em> 2000-2007</em></li>
+      </ul>
+  
+</section>
+
+<section id="experience">
+
+<h1>EXPERIENCE</h1>
+  <ul>
+        <li> I worked as a Tv Presenter @Rocklandhouse Tv Uyo(2018-2019).</li>
+        <li>Student biology teacher at Community SEC SCH, Obong Itam, AKS.</li>
+        <li>Student Biology teacher at ImmaculateConception Itak</li>
+                 <li>founder of ECHEF FOODS from 2017-date </li>
+        <li>pre-intern at startng.</li>
+      </ul>
+</section>
+
+<section id="contact">
+
+<ul>
+<div>
+<img width="30" src="./facebook.svg" alt="facebook page">
+<a href="https://m.facebook.com/001EChef/?ref=bookmarks"
+   target="blank">Facebook</a></div>
+
+<div>
+<img width="30" src="./twitter.svg" alt="twitter link">
+<a href="https://twitter.com/EstherUwem2" target="blank">Twitter</a></div>
+
+<div>
+<img width="30" src="./gmail.svg" alt="email address">
+<a href="#contact" target="blank">specialzzztar@gmail.com</a>
+</div>
+
+<div>
+<img width="30" src="./whatsapp.svg" alt="whatsapp image">
+<a href="https://api.whatsapp.com/send?phone=2348138818017" target="blank">Whatsapp</a></div>
+
+<div>
+<img width="30" src="./dial-pad.svg" alt="whatsapp image">
+<a href="#contact" target="blank">+23408138818017</a></div>
+</ul>
+</section>
+</section>
+
+<div id="modal-with-form" class="contact-modal hide-modal">
+<div class="container">
+<form id="contact-form">
+<h3>To contact me...</h3>
+<h4>Fill this form</h4>
+<span id="close-btn">&times;</span>
+<fieldset>
+<input type="text" id="name" required autofocus minlength="4" placeholder="Your Name">
+
+</fieldset>
+<fieldset>
+<input type="email" id="email" required placeholder="Your Email Here...">
+
+</fieldset>
+
+<fieldset>
+<textarea id="message" minlength="20" required placeholder="Type your message here..."></textarea>
+</fieldset>
+<fieldset>
+<button name="submit" id="contact-submit">Submit</button>
+</fieldset>
+</form>
+</div>
+</div>
+<div class="contact-modal-open-btn">
+<h2>Contact me.</h2>
+</div>
+<footer>Made By Uwem Nsikan Esther, Shn01447 &copy; 2019</footer>
+<script src="test.js"></script>
+</body>
