--- a/Nsikan.html
+++ b/Nsikan.html
@@ -5,7 +5,7 @@
 <title> ESTHER UWEM CV HTML</title>
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="estherstyle.css">
 </head>
 
 <body>
