--- a/Nsikan.html
+++ b/Nsikan.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta https-equiv="X-UA-Compatible" content="IE=edge">
 <title> ESTHER UWEM CV HTML</title>
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
